<resources>
    <string name="app_name">邦邦社区</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mains">MainsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_full">MainFullActivity</string>

    <!-- 侧滑菜单字符串资源 -->
    <string name="drawer_item_me_zone">个人空间</string>
    <string name="drawer_item_me_collect">我的收藏</string>
    <string name="drawer_item_me_participate">我参与的</string>
    <string name="drawer_item_chicken_soup">心灵鸡汤</string>
    <string name="drawer_item_advice_feedback">意见反馈</string>
    <string name="drawer_item_about_us">关于我们</string>
    <string name="drawer_item_system_setting">系统设置</string>

    <!-- login -->
    <string name="login_username_hint_text">user...name</string>
    <string name="login_password_hint_text">pass...word</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>

    <!-- register -->
    <string name="top_hint_text">欢迎入驻邦邦社区--程序员的家</string>
    <string name="register_user_name_hint_text">手机号码注册</string>
    <string name="register_user_code_hint_text">验证码</string>
    <string name="register_password_hint_text">请设置您的密码</string>
    <string name="register_send_code_text">发送验证码</string>
    <string name="register_sending_code_text">已发送...</string>
    <string name="title_activity_my_message">MyMessageActivity</string>
    <string name="title_activity_edit_message">EditMessageActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>


    <!-- dialog相关字段 -->
    <string name="common_title_tips">温馨提示</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="take_poto">拍照</string>
    <string name="import_poto">从本地导入</string>
    <string name="common_loading_tips">努力加载&#8230;</string>
    <string name="common_record">按住录音</string>
    <string name="submit_text">提交</string>
    <string name="record_time_text">音频时间至少2s，请重试</string>
    <string name="record_time_max_text">音频时间最长为10s</string>
    <string name="search_text">搜索</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="title_activity_request_list">RequestListActivity</string>


</resources>
